Исправление замечаний PR 1